# model-to-image

./: LICENSE.txt  README.md  gitignore.txt  pyproject.toml  zzzzz.ipynb
model_to_image/: __init__.py  glb_to_image.py  obj_to_image.py  stl_to_image.py
model_to_image.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
