
[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "3d-to-image"
version = "0.1.2"
description = "A Python package for converting 3D files to images."
readme = "README.md"
authors = [{ name = "Muhammad Ateeq", email = "mr.ateeqazam@gmail.com" }]
dependencies = ["opencv-python", "numpy", "scipy", "scikit-learn", "pyrender", "trimesh", "matplotlib", "pyvista"]
keywords = ["3D processing", "3D to image", "computer vision"]
license = { text = "CC BY-ND" }

["project.urls"]
Homepage = "https://github.com/semwaqas/model-to-image"
Repository = "https://github.com/semwaqas/model-to-image"